# Cortex

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
app/routers/: chat.py
app/services/: distiller.py  graph_service.py  memory_service.py
app/services/llm/: __init__.py  base.py  groq_provider.py  ollama_provider.py
backend/: .dockerignore  Dockerfile  pyproject.toml  run.txt
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/core/: config.py
backend/app/routers/: auth.py  chat.py  conversations.py
backend/app/services/: distiller.py  gardener.py  graph_service.py  memory_service.py
backend/app/services/llm/: groq_provider.py  ollama_provider.py
backend/scripts/: check_postgres.py  check_qdrant.py
docs/: kubernetes.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  chatbar.tsx  chatpage.tsx
frontend/src/components/chat/: chat-box.tsx
frontend/src/config/: app.config.ts
frontend/src/pages/: landing.tsx
k8s/: kustomization.yaml
k8s/base/: .gitignore  ingress.yaml  kustomization.yaml  namespace.yaml
k8s/base/backend/: deployment.yaml  hpa.yaml  service.yaml
k8s/base/frontend/: deployment.yaml  hpa.yaml  service.yaml
k8s/base/neo4j/: deployment.yaml  pvc.yaml  service.yaml
k8s/base/postgres/: deployment.yaml  pvc.yaml  service.yaml
k8s/base/qdrant/: deployment.yaml  pvc.yaml  service.yaml
scripts/: check_groq.py  check_neo4j.py  requirements.txt
(+2 files in other folders)
